# timeline-reporter

./: .env.example  .gitignore  LICENSE  R2_SETUP_GUIDE.md  README.md  config.py  lint.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_all.py
.github/workflows/: ci.yml
clients/: __init__.py  cloudflare_r2.py  mongodb.py  mongodb_client.py  openai.py  openai_client.py  perplexity.py  perplexity_client.py  pinecone.py  pinecone_client.py
config/: __init__.py  audio_config.py  cloudflare_config.py  curation_config.py  deduplication_config.py  discovery_config.py  prompts.py  research_config.py  settings.py  verification_config.py  writing_config.py
debug/: DEBUG_README.md  debug_audio.py  debug_audio_test.py  debug_curation.py  debug_deduplication.py  debug_deduplication_test.py  debug_discovery.py  debug_discovery_test.py
models/: __init__.py  core.py
services/: __init__.py  article_insertion.py  article_research.py  audio_generation.py  decision.py  deduplication.py  discovery.py  event_deduplication.py  event_discovery.py  event_selection.py  hybrid_curator.py  lead_curation.py  lead_deduplication.py  lead_discovery.py  lead_research.py  lead_verification.py  research.py  storage.py  story_persistence.py  story_research.py  story_writing.py  tts.py
test_audio_output/: podcast_script_21 July 2025.txt
tests/: README_TESTING.md  __init__.py  conftest.py
tests/clients/: __init__.py  test_cloudflare_r2.py  test_integration.py  test_mongodb.py  test_openai.py  test_perplexity.py  test_pinecone.py
tests/services/: __init__.py  test_audio_generation.py  test_audio_generation_real.py  test_curation.py  test_decision.py  test_deduplication.py  test_discovery.py  test_generation.py  test_hybrid_curator.py  test_insertion.py  test_integration.py  test_persistence.py  test_research.py  test_selection.py  test_storage.py  test_tts.py  test_verification.py  test_writing.py
utils/: __init__.py  date.py  date_formatting.py  logger.py  models.py  url_deduplication.py  voice.py
